<resources>
    <string name="app_name">OCMR</string>
    <string name="email">이메일</string>
    <string name="hint_email">이메일을 입력해주세요.</string>
    <string name="password">비밀번호</string>
    <string name="hint_password">비밀번호를 입력해주세요.</string>
    <string name="login">로그인</string>
    <string name="register_via_email">이메일로 가입</string>
    <string name="forgot_password">비밀번호 찾기</string>
    <string name="simple_login_sns">SNS 간편로그인</string>
    <string name="sign_up_as_customer">고객으로 가입</string>
    <string name="i_want_to_help_from_craftsmain">장인의 도움을 받고 싶어요.</string>
    <string name="join_a_master">마스터로 가입</string>
    <string name="i_want_to_meet_customer">고객을 만나고 싶어요.</string>
    <string name="enter_your_email">이메일 입력</string>
    <string name="hint_password_required">영문+숫자 조합 8자리 이상 입력</string>
    <string name="confirm_password">비밀번호 확인</string>
    <string name="hint_confirm_password">비밀번호 재입력</string>
    <string name="accept_term_and_condition">약관 동의</string>
    <string name="agreement_to_the_terms_and_conditions_by_guarantee">보증에 의한 약관 동의</string>
    <string name="five_times_sef_pay">(5배 자부담)</string>
    <string name="i_agree_with_all_term_condition">전체 약관에 동의합니다.</string>
    <string name="private_policy">개인정보 취급방침 (필수)</string>
    <string name="sign_up">회원가입</string>
    <string name="check_your_area_expertise">전문 분야를 선택해주세요</string>
    <string name="select_an_items">품목을 선택해주세요</string>
    <string name="next">다음</string>
    <string name="back">이전</string>
    <string name="area">지역</string>
    <string name="city_country_gid">시/군/구</string>
    <string name="check_your_activity_country">활동 지역을 선택해주세요</string>
    <string name="get_verification_letter">인증문자 받기</string>
    <string name="input">입력</string>
    <string name="get_phone_verification_letter">인증확인</string>
    <string name="hint_verification_phone">인증번호 입력</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="ok">Ok</string>
    <string name="please_check_your_phone_number">휴대폰 인증을 해주세요</string>
    <string name="time_count_resend_code">인증번호가 발송되었습니다 (남은 횟수 5회)</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="enter_your_phone_number">휴대폰 번호 입력</string>
    <string name="certification_number_input">인증번호 입력</string>
    <string name="certification">인증</string>
    <string name="please_set_new_password">새로운 비밀번호를 설정해주세요</string>
    <string name="enter_new_password">새 비밀번호 입력</string>
    <string name="enter_confirm_password">비밀번호 확인</string>
    <string name="change">변경하기</string>
    <string name="please_enter_your_personal_information">개인정보를 입력해주세요</string>
    <string name="name">이름</string>
    <string name="enter_your_name">이름 입력</string>
    <string name="dob">생년월일</string>
    <string name="year">년</string>
    <string name="work">일</string>
    <string name="month">월</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="address">주소</string>
    <string name="enter_post_code">우편번호 입력</string>
    <string name="address_search">주소 검색</string>
    <string name="enter_address">주소 입력</string>
    <string name="enter_detail_address">상세주소 입력</string>
    <string name="home">홈</string>
    <string name="send_request">보낸 요청서</string>
    <string name="transaction_history">거래내역</string>
    <string name="master_suggestion">마스터의 제안</string>
    <string name="chatting">채팅</string>
    <string name="my_page">마이페이지</string>
    <string name="act_as_master">마스터로 활동</string>
    <string name="leave_room">방 나가기</string>
    <string name="report_it">신고하기</string>
    <string name="search_service_you_want">원하는 서비스를 검색하세요</string>
    <string name="recent_searches">최근 검색어</string>
    <string name="reform">리폼</string>
    <string name="repair">수선</string>
    <string name="dyeing">염색</string>
</resources>