<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="44dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imgBack"
        android:src="@drawable/ic_back"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="48dp"
        android:layout_height="48dp"/>

    <TextView
        android:id="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/imgBack"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:textColor="@color/colorMainBlack"
        android:fontFamily="@font/apple_sd_gothic_neo_bold"
        android:textSize="20sp"
        android:text="@string/find_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvPhone"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:textColor="@color/colorMainBlack"
        android:fontFamily="@font/apple_sd_gothic_neo_medium"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:text="@string/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.example.ocmr.custom.OcmrForm
        android:id="@+id/etPhoneNumber"
        android:singleLine="true"
        app:typeForm="1"
        app:strHint="@string/enter_your_phone_number"
        android:inputType="phone"
        android:fontFamily="@font/apple_sd_gothic_neo_medium"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        android:textColorHint="@color/colorGray2"
        android:textColor="@color/colorMainBlack"
        app:layout_constraintEnd_toStartOf="@id/btnGetVerification"
        app:layout_constraintTop_toBottomOf="@id/tvPhone"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="52dp"/>

    <Button
        android:id="@+id/btnGetVerification"
        app:layout_constraintTop_toTopOf="@id/etPhoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        style="@style/StyleButtonBlack2"
        android:enabled="false"
        android:paddingHorizontal="12sp"
        android:text="@string/get_verification_letter"
        android:layout_width="wrap_content" />

    <com.example.ocmr.custom.OcmrForm
        android:id="@+id/etCertification"
        android:singleLine="true"
        app:strHint="@string/certification_number_input"
        android:textSize="16sp"
        app:typeForm="1"
        android:maxLength="5"
        android:inputType="number"
        android:textColorHint="@color/colorGray2"
        android:textColor="@color/colorMainBlack"
        android:background="@drawable/bg_edt_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPhoneNumber"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="52dp"/>

    <Button
        style="@style/StyleButtonBlack"
        android:enabled="false"
        android:textColor="@color/colorGray2"
        android:text="@string/certification"
        app:layout_constraintTop_toBottomOf="@id/etCertification"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>