<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="ORCM"
        android:textColor="@color/white"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="244dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:background="@drawable/bg_edt_white"
        android:hint="@string/hint_email"
        android:paddingHorizontal="16dp"
        android:textColor="@color/white"
        android:textColorHint="#99FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:background="@drawable/bg_edt_white"
        android:hint="@string/hint_password"
        android:paddingHorizontal="16dp"
        android:textColor="@color/white"
        android:textColorHint="#99FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/StyleButtonRed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="33dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword" />

    <View
        android:id="@+id/vCenter"
        android:layout_width="1dp"
        android:layout_height="11dp"
        android:layout_marginTop="20dp"
        android:background="#E0E0E0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/register_via_email"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/vCenter"
        app:layout_constraintEnd_toStartOf="@id/vCenter"
        app:layout_constraintTop_toTopOf="@id/vCenter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/vCenter"
        app:layout_constraintStart_toEndOf="@id/vCenter"
        app:layout_constraintTop_toTopOf="@id/vCenter" />

    <ImageView
        android:id="@+id/imgKakaotalk"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:src="@drawable/img_kakaotalk"
        android:layout_marginStart="59dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/tvLoginSimple"
        app:layout_constraintEnd_toStartOf="@+id/imgApple"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgApple"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:src="@drawable/img_kakaotalk"
        app:layout_constraintTop_toTopOf="@id/imgKakaotalk"
        app:layout_constraintEnd_toStartOf="@+id/imgN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgKakaotalk" />

    <ImageView
        android:id="@+id/imgN"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:src="@drawable/img_kakaotalk"
        app:layout_constraintTop_toTopOf="@id/imgKakaotalk"
        app:layout_constraintEnd_toStartOf="@+id/imgGoogle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgApple" />

    <ImageView
        android:id="@+id/imgGoogle"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:src="@drawable/img_kakaotalk"
        app:layout_constraintTop_toTopOf="@id/imgKakaotalk"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="59dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgN" />

    <TextView
        android:id="@+id/tvLoginSimple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/simple_login_sns"
        android:textColor="#BDBDBD"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>